Legger til objekter for requester og responser i personApi (#227)
* Legger til objekter for requester og responser i personApi. Legger også til HttpProblem og returnerer dette ved feil

* Fjerner try/catch i hentIdent da denne var unødvendig
