# mediator/src/main/kotlin/no/nav/dagpenger/rapportering/personregister/mediator/api/PersonApi.kt
@@ -3,44 +3,83 @@ package no.nav.dagpenger.rapportering.personregister.mediator.api
 import io.github.oshai.kotlinlogging.KotlinLogging
 import io.ktor.http.HttpStatusCode
 import io.ktor.server.application.Application
+import io.ktor.server.application.install
 import io.ktor.server.auth.authenticate
+import io.ktor.server.plugins.BadRequestException
+import io.ktor.server.plugins.statuspages.StatusPages
 import io.ktor.server.request.receive
 import io.ktor.server.response.respond
 import io.ktor.server.routing.post
 import io.ktor.server.routing.route
 import io.ktor.server.routing.routing
 import no.nav.dagpenger.rapportering.personregister.mediator.service.PersonService
+import java.net.URI
 
 private val logger = KotlinLogging.logger {}
 
 internal fun Application.personApi(personService: PersonService) {
+    install(StatusPages) {
+        exception<Throwable> { call, cause ->
+            when (cause) {
+                is PersonNotFoundException -> {
+                    logger.warn { "Finner ikke person" }
+                    call.respond(
+                        HttpStatusCode.NotFound,
+                        HttpProblem(
+                            title = "Not Found",
+                            status = 404,
+                            detail = cause.message,
+                        ),
+                    )
+                }
+
+                is BadRequestException -> {
+                    logger.error { "Bad Request: ${cause.message}" }
+                    call.respond(
+                        HttpStatusCode.BadRequest,
+                        HttpProblem(
+                            title = "Bad Request",
+                            status = 400,
+                            detail = cause.message,
+                        ),
+                    )
+                }
+
+                else -> {
+                    logger.error(cause) { "Kunne ikke hente person" }
+                    call.respond(
+                        HttpStatusCode.InternalServerError,
+                        HttpProblem(
+                            title = "Internal Server Error",
+                            status = 500,
+                            detail = cause.message,
+                        ),
+                    )
+                }
+            }
+        }
+    }
     routing {
         authenticate("azureAd") {
             route("/hentPersonId") {
                 post {
                     logger.info { "POST /hentPersonId" }
-                    val ident = call.receive<String>()
+                    val request = call.receive<IdentBody>()
 
-                    if (!ident.matches(Regex("[0-9]{11}"))) {
+                    if (!request.ident.matches(Regex("[0-9]{11}"))) {
                         logger.error { "Person-ident må ha 11 sifre" }
-                        call.respond(HttpStatusCode.BadRequest, "Person-ident må ha 11 sifre")
-                        return@post
+                        throw BadRequestException("Person-ident må ha 11 sifre")
                     }
 
-                    try {
-                        personService
-                            .hentPersonId(ident)
-                            ?.also { personId ->
-                                call.respond(
-                                    HttpStatusCode.OK,
-                                    personId,
-                                )
-                            }
-                            ?: call.respond(HttpStatusCode.NotFound, "Finner ikke person")
-                    } catch (e: Exception) {
-                        logger.error(e) { "Kunne ikke hente person" }
-                        call.respond(HttpStatusCode.InternalServerError, "Kunne ikke hente person")
-                    }
+                    personService
+                        .hentPersonId(request.ident)
+                        ?.also { personId ->
+                            call.respond(
+                                HttpStatusCode.OK,
+                                PersonIdBody(personId),
+                            )
+                        }
+                        ?: throw PersonNotFoundException()
                 }
             }
 
@@ -48,27 +87,39 @@ internal fun Application.personApi(personService: PersonService) {
                 post {
                     logger.info { "POST /hentIdent" }
 
-                    try {
-                        val personId = call.receive<String>().toLong()
+                    val request = call.receive<PersonIdBody>()
 
-                        personService
-                            .hentIdent(personId)
-                            ?.also { ident ->
-                                call.respond(
-                                    HttpStatusCode.OK,
-                                    ident,
-                                )
-                            }
-                            ?: call.respond(HttpStatusCode.NotFound, "Finner ikke person")
-                    } catch (e: NumberFormatException) {
-                        logger.error(e) { "Ikke gyldig personId" }
-                        call.respond(HttpStatusCode.BadRequest, "Ikke gyldig personId")
-                    } catch (e: Exception) {
-                        logger.error(e) { "Kunne ikke hente person" }
-                        call.respond(HttpStatusCode.InternalServerError, "Kunne ikke hente person")
-                    }
+                    personService
+                        .hentIdent(request.personId)
+                        ?.also { ident ->
+                            call.respond(
+                                HttpStatusCode.OK,
+                                IdentBody(ident),
+                            )
+                        }
+                        ?: throw PersonNotFoundException()
                 }
             }
         }
     }
 }
+
+data class HttpProblem(
+    val type: URI = URI.create("about:blank"),
+    val title: String,
+    val status: Int? = 500,
+    val detail: String? = null,
+    val instance: URI = URI.create("about:blank"),
+)
+
+data class PersonNotFoundException(
+    override val message: String = "Finner ikke person",
+) : Exception(message)
+
+data class IdentBody(
+    val ident: String,
+)
+
+data class PersonIdBody(
+    val personId: Long,
+)
